<resources>
    <string name="app_name">Editor-App-Intern</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="album">Album</string>
    <string name="capture_photo">Capture Photo</string>
    <string name="filter">Filter</string>
    <string name="normal">Normal</string>
    <string name="image_saved">Take photo successfully</string>
    <string name="image_save">Saved image successfully</string>
    <string name="edit_again">Edit again</string>
    <string name="saved_project">Saved project</string>
    <string name="time_5s">5s</string>
    <string name="time_3s">3s</string>
    <string name="time_7s">7s</string>
    <string name="time_10s">10s</string>
    <string name="turn_off_timer">Turn off</string>
    <string name="default_timer">1s</string>
    <string name="count_down_timer">5</string>
    <string name="slogan">Edit Photos like a Pro in just One Click</string>
    <string name="try_it_now">TRY IT NOW</string>
    <string name="draw">Draw</string>
    <string name="save">Save</string>
    <string name="pick_color">Please select a color which you want.</string>
    <string name="path">Pictures/MyApp/EditedImages</string>
    <string name="exception_cant_open_output_stream">Không thể mở OutputStream</string>
    <string name="exception_cant_create_record_in_media_store">Không thể tạo bản ghi mới trong MediaStore</string>
    <string name="fail_to_save_image">Lỗi khi lưu ảnh</string>
    <string name="save_image_successfully">Image saved</string>
    <string name="delete">delete</string>
    <string name="permission_required">Permission Required</string>
    <string name="storage_permission_is_required_to_access_images">Storage permission is required to access images</string>
    <string name="permission_denied_permanently_dialog">Storage permission is denied permanently. You can enable it in the app settings. Do you want to go to the app settings?</string>
    <string name="ok">Oke</string>
    <string name="notice">notice</string>
    <string name="delete_image">delete</string>
    <string name="cancel">Cancel</string>
    <string name="save_image">save image</string>
    <string name="save_new">save new</string>
    <string name="save_replace">save place</string>
    <string name="discard_changes">discard changes\n</string>
    <string name="enter_text">Enter text</string>
    <string name="write_something">Write something</string>
    <string name="aa">Aa</string>
    <string name="size_default">40</string>
    <string name="fail_to_apply_hue_filter">Lỗi khi áp dụng hiệu ứng Hue</string>
    <string name="sticker">Sticker</string>
    <string name="album_photo">Album </string>
    <string name="detail_image">Detail Image </string>
    <string name="settings">Settings</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="permission_camera_access">Permission access camera</string>
    <string name="question_to_access_camera">Please allow access to camera.Do you want to allow?</string>
    <string name="rationale_camera_permission">This feature is unavailable because this feature requires permission that you have denied. Please allow Camera permission from settings to proceed further</string>
    <string name="question_confirm_detele_image">Confirm delete ?</string>
    <string name="message_confirm_detele_image">Do you want to delete this image ?</string>
    <string name="cannot_delete">Cannot delete image\n</string>
    <string name="delete_image_successfully">Delete image successfully</string>
    <string name="image_does_not_exist">Image does not exist</string>
    <string name="not_found">No images available</string>
    <string name="display_options">Display options</string>
    <string name="newest">Newest to oldest</string>
    <string name="close">Close</string>
    <string name="oldest">Oldest to newest</string>
    <string name="invalid_image_path">Invalid image path</string>
</resources>