<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_margin="@dimen/size_5dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.camera.CameraActivity">

    <jp.co.cyberagent.android.gpuimage.GPUImageView
        android:id="@+id/gpu_image_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_600dp"
        app:gpuimage_show_loading="false"
        app:gpuimage_surface_type="texture_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:visibility="invisible"
        android:textColor="@color/red"
        android:fontFamily="@font/lato_bold"
        android:textSize="@dimen/size_24sp"
        android:text="@string/count_down_timer"
        android:layout_marginEnd="@dimen/size_20dp"
        android:layout_marginBottom="@dimen/size_210dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/count_down_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/timer_header"
        android:visibility="invisible"
        android:layout_width="@dimen/size_100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_20dp"
        android:layout_marginEnd="@dimen/size_20dp"
        android:background="@drawable/background_with_border"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <ImageView
            android:id="@+id/icon_time_header"
            android:layout_width="@dimen/size_25dp"
            android:layout_height="@dimen/size_25dp"
            android:background="@drawable/time"
            android:contentDescription="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/tv_timer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/default_timer"
            android:textSize="@dimen/size_18sp"
            app:layout_constraintBottom_toBottomOf="@id/icon_time_header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/icon_time_header"
            app:layout_constraintTop_toTopOf="@id/icon_time_header" />

    </androidx.constraintlayout.widget.ConstraintLayout>



    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcv_filter_camera"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_150dp"
        android:layout_marginBottom="@dimen/size_30dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/camera_capture_button"
        app:layout_constraintTop_toBottomOf="@+id/gpu_image_view" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_time"
        android:layout_width="@dimen/size_350dp"
        android:layout_height="@dimen/size_80dp"
        android:layout_marginTop="@dimen/size_30dp"
        android:background="@drawable/background_with_border"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/camera_capture_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/btn_turn_off_timer"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/size_25dp"
            android:contentDescription="@null"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/turn_off_timer"
            android:textSize="@dimen/size_18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_time_3s"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_time_3s"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/time_3s"
            android:textSize="@dimen/size_16sp"
            app:layout_constraintBottom_toBottomOf="@id/btn_turn_off_timer"
            app:layout_constraintEnd_toStartOf="@id/tv_time_5s"
            app:layout_constraintStart_toEndOf="@id/btn_turn_off_timer"
            app:layout_constraintTop_toTopOf="@id/btn_turn_off_timer" />

        <TextView
            android:id="@+id/tv_time_5s"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/time_5s"
            android:textSize="@dimen/size_16sp"
            app:layout_constraintBottom_toBottomOf="@id/btn_turn_off_timer"
            app:layout_constraintEnd_toStartOf="@id/tv_time_7s"
            app:layout_constraintStart_toEndOf="@id/tv_time_3s"
            app:layout_constraintTop_toTopOf="@id/btn_turn_off_timer" />

        <TextView
            android:id="@+id/tv_time_7s"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/time_7s"
            android:textSize="@dimen/size_16sp"
            app:layout_constraintBottom_toBottomOf="@id/btn_turn_off_timer"
            app:layout_constraintEnd_toStartOf="@id/tv_time_10s"
            app:layout_constraintStart_toEndOf="@id/tv_time_5s"
            app:layout_constraintTop_toTopOf="@id/btn_turn_off_timer" />

        <TextView
            android:id="@+id/tv_time_10s"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/time_10s"
            android:textSize="@dimen/size_16sp"
            app:layout_constraintBottom_toBottomOf="@id/btn_turn_off_timer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_time_7s"
            app:layout_constraintTop_toTopOf="@id/btn_turn_off_timer" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/btn_time"
        android:layout_width="@dimen/size_30dp"
        android:layout_height="@dimen/size_30dp"
        android:layout_marginEnd="@dimen/size_20dp"
        android:background="@drawable/time"
        android:contentDescription="@null"
        app:layout_constraintBottom_toBottomOf="@id/camera_capture_button"
        app:layout_constraintEnd_toStartOf="@id/btn_filter"
        app:layout_constraintTop_toTopOf="@id/camera_capture_button" />

    <ImageView
        android:id="@+id/btn_filter"
        android:layout_width="@dimen/size_30dp"
        android:layout_height="@dimen/size_30dp"
        android:background="@drawable/filter"
        android:contentDescription="@null"
        app:layout_constraintBottom_toBottomOf="@id/camera_capture_button"
        app:layout_constraintEnd_toStartOf="@+id/camera_capture_button"
        app:layout_constraintStart_toEndOf="@+id/camera_capture_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/camera_capture_button" />

    <ImageView
        android:id="@+id/camera_capture_button"
        android:layout_width="@dimen/size_80dp"
        android:layout_height="@dimen/size_80dp"
        android:layout_marginBottom="@dimen/size_80dp"
        android:background="@drawable/camera"
        android:contentDescription="@null"
        android:elevation="@dimen/size_2dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_select_cam"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn_filter"
        app:layout_constraintTop_toBottomOf="@id/rcv_filter_camera" />

    <ImageView
        android:id="@+id/btn_select_cam"
        android:layout_width="@dimen/size_30dp"
        android:layout_height="@dimen/size_30dp"
        android:background="@drawable/select_len"
        android:contentDescription="@null"
        app:layout_constraintBottom_toBottomOf="@id/camera_capture_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/camera_capture_button"
        app:layout_constraintTop_toTopOf="@id/camera_capture_button" />

</androidx.constraintlayout.widget.ConstraintLayout>
